# CPPBootsrap

./: .travis.yml  CMakeLists.txt  README.md  travis.yml
cmake/: compiler.cmake  macros.cmake  platform.cmake  project.cmake
tests/: CMakeLists.txt
